--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <h2 class="title-section internet-trends">
                       What do we focus on?
                     </h2>
-                    <ul>
+                    <ul style="margin-bottom: 4vh;">
                       <li>
                         <a href="#">Legal </a>
                       </li>
@@ -198,11 +198,9 @@
                         <a href="#">Strategy</a>
                       </li>
 
-                      <li>
+                      <li style="margin-left: 25px;">
                         <a href="#">Cybersecurity</a>
                       </li>
-
-
                     </ul>
                   </div>
                   <!---->
@@ -303,14 +301,13 @@
             <div class="slide-content">
               <!---->
               <div>
-                <h2 class="title-section special-reports">Interested in connecting with us?</h2>
-                <ul>
+                <!-- <ul>
                   <li class="reports-special">
                     <a href="mailto:contact@dragonstorm.ai">Contact us</a>
                   </li>
-                </ul>
-                <div class="row px-5 mt-4 heightRow">
-                  <div class="col-lg-4 pb-30">
+                </ul> -->
+                <div class="row justify-content-center px-5 mt-4 heightRow">
+                  <!-- <div class="col-lg-4 pb-30">
                     <div class="sidebar-item mb-30">
                       <div class="info-box" style="background-color: transparent">
                         <h3 style="color: white;">Contact Info</h3>
@@ -356,11 +353,13 @@
                         </ul>
                       </div>
                     </div>
-                  </div>
-                  <div class="col-lg-8 pb-30">
+                  </div> -->
+                  <div class="col-lg-11 pb-30">
                     <div class="sub-section-title">
                       <h2 class="sub-section-title-heading color-maincolor pb-4">
-                        <b2 style="color: white;"> Drop us a message </b2>
+                        <h2 class="title-section special-reports">
+                          Interested in connecting with us?
+                        </h2>
                       </h2>
                     </div>
                     <form>
@@ -382,17 +381,8 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-md-6">
-                        <div class="form-group mb-20">
-                          <input type="text" name="telegram" id="telegram" class="form-control"
-                            placeholder="Your telegram id (optional)*" required=""
-                            data-error="Please enter your telegram id (optional)"
-                            style="background-color: transparent; color: white;">
-                          <div class="help-block with-errors"></div>
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="form-group mb-20">
+                      <div class="col-md-6 pe-md-1">
+                        <div class="form-group mb-20 pe-md-1 me-md-1">
                           <input type="text" name="subject" id="subject" class="form-control"
                             placeholder="Your Subject*" required="" data-error="Please enter your subject"
                             style="background-color: transparent; color: white;">
@@ -410,7 +400,7 @@
                         </div>
                       </div>
                       <div class="col-12">
-                        <button class="btn main-btn full-width w-100 text-white" type="submit"
+                        <button class="btn main-btn full-width mt-4 w-100 text-white" type="submit"
                           style="pointer-events: all; cursor: pointer;">Send Message</button>
                         <div id="msgSubmit"></div>
                         <div class="clearfix"></div>
