--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <a href="#">Growth</a>
                       </li>
 
-                      <li>
+                      <li style="margin-left: 20px;">
                         <a href="#">Strategy</a>
                       </li>
 
@@ -364,7 +364,7 @@
                     </div>
                     <form>
                       <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-sm-12">
                           <div class="form-group mb-20">
                             <input type="name" name="name" id="name" class="form-control" placeholder="Your Name*"
                               required="" data-error="Please enter your name"
@@ -372,7 +372,7 @@
                             <div class="help-block with-errors"></div>
                           </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-sm-12">
                           <div class="form-group mb-20">
                             <input type="email" name="_replyto" id="email" class="form-control"
                               placeholder="Your Email*" required="" data-error="Please enter your email"
@@ -381,8 +381,8 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-md-6 pe-md-1">
-                        <div class="form-group mb-20 pe-md-1 me-md-1">
+                      <div class="col-md-6 col-sm-12 pe-sm-0 pe-md-1">
+                        <div class="form-group mb-20 pe-md-1 me-sm-0 pe-sm-0 me-md-1">
                           <input type="text" name="subject" id="subject" class="form-control"
                             placeholder="Your Subject*" required="" data-error="Please enter your subject"
                             style="background-color: transparent; color: white;">
